--- a/apt/depiction/CircleOldMask.html
+++ b/apt/depiction/CircleOldMask.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="container-fluid">
-        <p>Packages: CircleOldMask</p>
-        <p>Section: Themes</p>
-        <p>Description: Circle and old mask for your all icons</p>
-        <p>SHA256: 6578558a2da52b29f9dc74cd9057a30462cb51e3d3571e241dc46f01f0dce1fa</p>
+        <p class="text-center">Packages: CircleOldMask</p>
+        <p class="text-center">Section: Themes</p>
+        <p class="text-center">Description: Circle and old mask for your all icons</p>
+        <p class="text-center">SHA256: 6578558a2da52b29f9dc74cd9057a30462cb51e3d3571e241dc46f01f0dce1fa</p>
     </div>
     <!-- JQuery -->
     <script src="../../assets/jquery-3.5.1.min.js"></script>
