--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </li>
         </ul>
     </div>
+    <span class="text-center">T0bySoft © 2020</span>
     <!-- JQuery -->
     <script src="assets/jquery-3.5.1.min.js"></script>
     <!-- Bootstrap -->
