--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T0bySoft | T0by's tweaks and themes</title>
+    <!-- Coinzilla verify -->
+    <meta name="coinzilla" content="4fd049bfb629f5d34f02f0e8b207de90" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap-grid.css">
     <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap-reboot.css">
