--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T0bySoft | T0by's tweaks and themes</title>
-    <!-- Coinzilla verify -->
-    <meta name="coinzilla" content="4fd049bfb629f5d34f02f0e8b207de90" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap-grid.css">
     <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap-reboot.css">
@@ -32,8 +30,8 @@
                 <a href="apt/depiction/CircleOldMask.html">CircleOldMask</a>
             </li>
         </ul>
+        <p class="text-center mt-1">T0bySoft © 2020</p>
     </div>
-    <span class="text-center">T0bySoft © 2020</span>
     <!-- JQuery -->
     <script src="assets/jquery-3.5.1.min.js"></script>
     <!-- Bootstrap -->
