--- a/index.html
+++ b/index.html
@@ -5,10 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T0bySoft | T0by's tweaks and themes</title>
+    <link rel="shortcut icon" type="image/png" href="/apt/CydiaIcon.png">
+    <link rel="apple-touch-icon" href="/apt/CydiaIcon.png" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap-grid.css">
     <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap-reboot.css">
     <link rel="stylesheet" href="assets/bootstrap-4.5.3-dist/css/bootstrap.css">
+    <!-- Facebook Analyst -->
+
+    <script>
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '706781886644541',
+                cookie: true,
+                xfbml: true,
+                version: 'v9.0'
+            });
+
+            FB.AppEvents.logPageView();
+
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 </head>
 
 <body>
@@ -16,7 +44,8 @@
         <ul class="list-group mt-1">
             <li class="list-group-item">
                 <img src="assets/img/cydia.jpeg" alt="cydia" width="54px" height="54px">
-                <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://t0bysoft.github.io/apt" class="link"> Add to Cydia</a>
+                <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://t0bysoft.github.io/apt"
+                    class="link"> Add to Cydia</a>
             </li>
             <li class="list-group-item">
                 <img src="assets/img/sileo.jpeg" alt="sileo" width="54px" height="54px">
