--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 <img src="assets/img/sileo.jpeg" alt="sileo" width="54px" height="54px">
                 <a href="sileo://source/https://t0bysoft.github.io/apt" class="link"> Add to Sileo</a>
             </li>
+            <li class="list-group-item">
+                <img src="/assets/img/zbra.png" alt="">
+                <a href="zbra://sources/add/https://t0bysoft.github.io/apt"> Add to Zbra</a>
+            </li>
         </ul>
         <span class="font-weight-bold">My Packages</span>
         <ul class="list-group">
