--- a/apt/depiction/CircleOldMask.html
+++ b/apt/depiction/CircleOldMask.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,29 @@
     <link rel="stylesheet" href="../../assets/bootstrap-4.5.3-dist/css/bootstrap-reboot.css">
     <link rel="stylesheet" href="../../assets/bootstrap-4.5.3-dist/css/bootstrap.css">
 </head>
+
 <body>
-    <div class="container-fluid">
-        <p>Packages: CircleOldMask</p>
-        <p>Section: Themes</p>
-        <p>Description: Circle and old mask for your all icons</p>
-        <p>SHA256: 6578558a2da52b29f9dc74cd9057a30462cb51e3d3571e241dc46f01f0dce1fa</p>
+    <div class="container">
+        <ul class="list-group">
+            <li class="list-group-item">
+                <img src="https://via.placeholder.com/54" alt="icon" class="img-fluid">
+                <span>CircleOldMask</span>
+            </li>
+            <span class="font-weight-bold">Information</span>
+            <li class="list-group-item">
+                <p>Packages: CircleOldMask</p>
+                <p>Section: Themes</p>
+                <p>Description: Circle and old mask for your all icons</p>
+            </li>
+            <span class="font-weight-bold">Screenshots</span>
+            <li class="list-group-item">
+                <p class="text-warning">Updating...</p>
+            </li>
+            <span class="font-weight-bold">Verify</span>
+            <li class="list-group-item">
+                <p>SHA-256: 6578558a2da52b29f9dc74cd9057a30462cb51e3d3571e241dc46f01f0dce1fa</p>
+            </li>
+        </ul>
     </div>
     <!-- JQuery -->
     <script src="../../assets/jquery-3.5.1.min.js"></script>
@@ -22,4 +40,5 @@
     <script src="../../assets/bootstrap-4.5.3-dist/js/bootstrap.bundle.js"></script>
     <script src="../../assets/bootstrap-4.5.3-dist/js/bootstrap.js"></script>
 </body>
+
 </html>
