--- a/packageInfo/CircleOldMask.html
+++ b/packageInfo/CircleOldMask.html
@@ -34,7 +34,7 @@
             </li>
             <span class="font-weight-bold">Download</span>
             <li class="list-group-item">
-                <a href="../apt/debs/com.t0bysoft.circleoldmask_1.0.0_iphoneos-arm.deb" class="link">Download DEB file</a>
+                <a href="../apt/debs/com.t0bysoft.circleoldmask_1.0.0_iphoneos-arm.deb" class="link">Download DEB file</a><br />
                 <a href="../apt/source/com.t0bysoft.circleoldmask_1.0.zip" class="link">Download source file</a>
             </li>
         </ul>
