--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div class="container-fluid">
         <ul class="list-group mt-1">
             <li class="list-group-item">
+                <img src="/assets/img/zbra.png" alt="">
+                <a href="zbra://sources/add/https://t0bysoft.github.io/apt"> Add to Zbra</a>
+            </li>
+            <li class="list-group-item">
                 <img src="assets/img/cydia.jpeg" alt="cydia" width="54px" height="54px">
                 <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://t0bysoft.github.io/apt"
                     class="link"> Add to Cydia</a>
@@ -24,10 +28,6 @@
             <li class="list-group-item">
                 <img src="assets/img/sileo.jpeg" alt="sileo" width="54px" height="54px">
                 <a href="sileo://source/https://t0bysoft.github.io/apt" class="link"> Add to Sileo</a>
-            </li>
-            <li class="list-group-item">
-                <img src="/assets/img/zbra.png" alt="">
-                <a href="zbra://sources/add/https://t0bysoft.github.io/apt"> Add to Zbra</a>
             </li>
         </ul>
         <span class="font-weight-bold">My Packages</span>
@@ -39,11 +39,28 @@
         </ul>
         <p class="text-center mt-1">T0bySoft © 2020</p>
     </div>
+    <!-- SweetAlert -->
+    <script src="/assets/sweetalert.min.js"></script>
     <!-- JQuery -->
     <script src="assets/jquery-3.5.1.min.js"></script>
     <!-- Bootstrap -->
     <script src="assets/bootstrap-4.5.3-dist/js/bootstrap.bundle.js"></script>
     <script src="assets/bootstrap-4.5.3-dist/js/bootstrap.js"></script>
+    <!-- JS -->
+    <script>
+        const randInt = Math.floor(Math.random() * 4);
+        switch (randInt) {
+            case 0:
+                swal("Hey!", "Have u ever useed Zebra package manager?", "warning");
+                break;
+            case 1:
+                swal("Hey!", "I recommend you to use Zebra package manager?", "warning");
+                break;
+            case 2:
+                swal("Hey!", "Have u ever used another package manager?", "warning")
+                break;
+        }
+    </script>
 </body>
 
 </html>
